<resources>
    <string name="app_name">Password Manager</string>
    <string name="my_vault">MyVault</string>
    <string name="generator">Generator</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="sync">Sync</string>
    <string name="content_description_sync">Sync from server</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search an item</string>
    <string name="fab_content_desc">Add item</string>
    <!-- MyVault Fragment-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_hint">Enter email to recover your account!</string>
    <string name="email_address">Email address</string>
    <string name="reset_password">Submit</string>

    <!-- UserProfile -->
    <string name="user_profile">User Profile</string>
    <string name="name_hint">Full Name</string>
    <string name="save_profile">Save Profile</string>
    <string name="strItemName">Site Name</string>
    <string name="url_hint">Domain</string>
    <string name="strEmailHint">Email or Username</string>
    <string name="strPasswordHint">Password</string>
    <string name="add_new_item">Add Item</string>
    <string name="full_name">Full Name</string>
    <string name="password_hint">pass@123</string>
    <string name="label">1233</string>
    <string name="please_enter_otp">Please enter the One Time Password (OTP) that was sent to your mobile number +971********.</string>
    <string name="verify">Verify</string>
    <string name="resend">Resend</string>
    <string name="edtTxtUserName">Email/ Username</string>
    <string name="PassET">Password</string>
    <string name="txtViewItem">The following are the information saved related to the selected account: You can edit them by selected the edit floating action located in the corner of the page.</string>
    <string name="save">Save</string>
    <string name="txtEditItem">Please press the Save button to save the information.</string>
    <string name="generated_password">Generated password</string>
    <string name="upperCase">Include Uppercase</string>
    <string name="lowerCase">Include Lowercase</string>
    <string name="includeNumbers">Include Numbers</string>
    <string name="includeChars">Include Characters</string>
    <string name="password_length">Password Length:</string>
    <string name="slider_desc">Length</string>
    <string name="generate">Generate</string>
    <string name="regenerate">Regenerate</string>
    <string name="copy">Copy</string>
    <string name="dark_light_mode">Dark mode</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="sign_out">Sign Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="fab_edit_item">edit item</string>
    <string name="add_new_item_head">Fill in the your item details, you can always edit it later</string>
    <string name="delete_item">Delete Item</string>
    <string name="currentPassword">Current Password</string>
    <string name="new_password">New password</string>
</resources>