<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewItemFragment">

    <TextView
        android:id="@+id/ViewMessageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txtViewItem"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />


    <TextView
        android:id="@+id/siteName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/ViewMessageTV"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/strItemName"
        android:textColor="@color/black" />


    <TextView
        android:id="@+id/emailOrUsernameTV"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/siteName"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/edtTxtUserName" />


    <TextView
        android:id="@+id/passTV"
        android:layout_width="255dp"
        android:layout_height="30dp"
        android:layout_below="@+id/emailOrUsernameTV"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/PassET"
        android:inputType="textPassword"
        app:endIconMode="password_toggle" />

    <Button
        android:id="@+id/PassCopyBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:layout_toEndOf="@id/passTV"
        android:background="#00191C1E"
        android:drawableBottom="@drawable/baseline_content_copy_24" />


    <TextView
        android:id="@+id/domainTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passTV"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/url_hint"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/deleteItemTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        android:text="@string/delete_item"
        android:textColor="@android:color/holo_red_dark"
        android:layout_below="@+id/domainTV"
        android:layout_centerHorizontal="true"
        />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="12dp"
            android:contentDescription="@string/fab_edit_item"
            app:srcCompat="@drawable/baseline_edit_24" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>
