<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditItemFragment">

    <TextView
        android:id="@+id/editMessageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/txtEditItem"
        android:textColor="@color/black"
        android:textStyle="bold|italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/NameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editMessageTV"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="20dp"

        android:hint="@string/strItemName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/UserNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/NameET"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/edtTxtUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/UserNameET"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/PassET"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/domainET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passET"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/url_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/domainET"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="305dp"
        android:layout_marginTop="40dp"
        android:text="@string/save" />

</RelativeLayout>
