<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_margin="15dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <TextView
        android:id="@+id/txtEmailHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_hint"
        android:textSize="15sp"
        android:textStyle="italic"
        android:textColor="@color/gray"
        android:layout_below="@+id/txtTitle"
        android:layout_marginTop="15dp"
        android:layout_marginStart="5dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_below="@id/txtEmailHint"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintWidth_max="400dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonResetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/textInputLayoutEmail"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
