<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OneTimePasswordActivity"
    >

    <TextView
        android:id="@+id/VerfIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        android:textStyle="bold|italic"

        app:drawableBottomCompat="@drawable/baseline_verified_user_24" />

    <TextView
        android:id="@+id/VerfTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="Verification"
        android:textSize="25dp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/MessTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VerfTV"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/please_enter_otp"
        android:textSize="15sp" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/MessTV"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="70dp"
        android:hint="@string/label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/VerifyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/verify" />

    <Button
        android:id="@+id/ResendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/VerifyBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/resend" />


</RelativeLayout>
