<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addNewItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@color/white"
    android:paddingTop="50dp"
    tools:context=".AddNewItemActivity">

    <TextView
        android:id="@+id/txtAddNameHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/strItemName"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAddNameHint"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintWidth_max="400dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtUrlHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutAddName"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/url_hint"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtUrlHint"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            app:layout_constraintWidth_max="400dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtEmailHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayoutUrl"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/strEmailHint"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtEmailHint"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            app:layout_constraintWidth_max="400dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtPasswordHint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutEmail"
        android:layout_marginStart="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/strPasswordHint"
        android:textColor="@color/gray"
        android:textSize="15sp"
        android:textStyle="italic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtPasswordHint"
        android:layout_marginTop="5dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            app:layout_constraintWidth_max="400dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textInputLayoutPassword"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:text="@string/add_new_item" />
</RelativeLayout>
